--- a/app/src/main/res/layout/activity_helped.xml
+++ b/app/src/main/res/layout/activity_helped.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".helped">
+    android:background="@color/pink"
+    tools:context=".Helped">
 
     <TextView
         android:id="@+id/textView"
@@ -14,7 +15,7 @@
         android:layout_marginTop="323dp"
         android:layout_marginBottom="340dp"
         android:text="help has been called"
-        android:background="#00000000"
+        android:background="@color/purple_200"
         android:textAlignment="center"
         android:textColor="#FF0000"
         android:textSize="20sp"
@@ -32,7 +33,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="280dp"
         android:onClick="back"
-        android:text="back "
+        android:text="back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
