--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,50 +7,90 @@
     tools:context=".Signed_in"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/pink">
+    android:background="@color/MainBgColor">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SafeSteps"
+        android:gravity="center"
+        android:textSize="40dp"
+        android:textStyle="bold">
+    </TextView>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/women_power" />
 
     <EditText
         android:id="@+id/editText_email"
         android:layout_width="match_parent"
+        android:background="@drawable/edit_text_border"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="Email:"
+        android:padding="10dp"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:layout_margin="10dp"
+
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="32dp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        />
 
     <EditText
         android:id="@+id/editText_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Password:"
+        android:background="@drawable/edit_text_border"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:padding="10dp"
+        android:layout_margin="10dp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="101dp" />
 
-    <Button
-        android:id="@+id/button_signin"
-        android:layout_margin="10dp"
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/MainBgColor_Darker"
+        android:orientation="vertical">
 
-        android:text="sign in"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="195dp" />
+        <Button
+            android:id="@+id/button_signin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="sign in"
+            android:textSize="15dp"
+            tools:layout_editor_absoluteX="116dp"
+            tools:layout_editor_absoluteY="195dp" />
 
-    <Button
-        android:id="@+id/button_signup"
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-
-        android:text="sign up"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="195dp" />
+        <Button
+            android:id="@+id/linkToSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Don't have an account? Sign up!"
+            android:textAlignment="center"
+            android:textSize="15dp" />
+    </LinearLayout>
 
 
 </LinearLayout>
