--- a/app/src/main/res/layout/activity_signed_in.xml
+++ b/app/src/main/res/layout/activity_signed_in.xml
@@ -1,21 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Signed_in">
+    android:background="@color/pink">
+
+    <ImageButton
+        android:id="@+id/settings"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="10dp"
+        android:background="@drawable/image_btn"
+        android:scaleType="fitCenter"
+        android:padding="1dp"
+        android:onClick="settings"
+        android:src="@drawable/settings" />
+
+    <ImageButton
+        android:id="@+id/profile_pic"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/image_btn"
+        android:scaleType="fitCenter"
+        android:padding="5dp"
+        android:onClick="profile"
+        android:src="@drawable/profile_pic" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/helpBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginBottom="340dp"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
         android:text="help"
-        android:onClick="help"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="80dp" />
 
+    <ImageButton
+        android:id="@+id/rewards"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="10dp"
+        android:background="@drawable/image_btn"
+        android:scaleType="fitCenter"
+        android:onClick="rewards"
+        android:src="@drawable/rewards" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/leaderboard"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:background="@drawable/image_btn"
+        android:scaleType="fitCenter"
+        android:padding="10dp"
+        android:onClick="leaderboard"
+        android:src="@drawable/leaderboard" />
+
+</RelativeLayout>
